--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'cglib', name: 'cglib', version: '3.2.4'
+    compile group: 'org.objenesis', name: 'objenesis', version: '2.5.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
