--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,10 @@
-import org.gradle.api.artifacts.maven.MavenDeployment
-
 group 'com.github.jarlef'
-archivesBaseName = 'fluent-validation'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'signing'
+apply plugin: 'idea'
 
 sourceCompatibility = 1.8
 sourceCompatibility = 1.8
@@ -15,15 +13,23 @@ repositories {
     mavenCentral()
 }
 
-def isReleaseVersion = !(version ==~ /(?i).*SNAPSHOT$/)
-if (isReleaseVersion) {
-    project.ext['upload.url'] = project.ext['upload.release.url']
-} else {
-    project.ext['upload.url'] = project.ext['upload.snapshot.url']
-}
-
 dependencies {
     compile group: 'cglib', name: 'cglib', version: '3.2.4'
     compile group: 'org.objenesis', name: 'objenesis', version: '2.5.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+
+
+sourceSets {
+    main {
+        java {
+            srcDir 'src/main/java'
+        }
+    }
+    test {
+        java {
+            srcDir 'src/test/java'
+        }
+    }
 }
